# DE-DS-UIII

./: README.md  Untitled.ipynb  deds-01-Introduction-to-git.ipynb  deds-02-Writing-Industry-Standard-Python.ipynb  deds-03-Data Acquisition I – APIs & Automation.ipynb  deds-04-Relational Databases & SQL Fundamentals.ipynb  deds-05-Advanced Selection-Aggregation-Normalizations.ipynb
DEP/: LICENSE  Makefile  README.md  pyproject.toml
DEP/docs/: mkdocs.yml
DEP/docs/docs/: index.md
predictive-maintenance/: LICENSE  Makefile  README.md  pyproject.toml
predictive-maintenance/docs/: mkdocs.yml
predictive-maintenance/docs/docs/: index.md
predictive-maintenance/pm/: __init__.py  dataset.py  features.py  plots.py
predictive-maintenance/pm/modeling/: predict.py  train.py
src/: modularLib.py  monolith-code.py  trial.py
